--- a/homefeed/homefeed.html
+++ b/homefeed/homefeed.html
@@ -6,7 +6,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
+    <link rel="icon" 
+                type="image/png" 
+                href="logobear.ico" />
+    <title>Home - CalPals</title>
+</head>
   <body>
     <!-- Side navigation -->
     <div class="sidenav">
@@ -59,7 +63,7 @@
         <a href="#">RHONA HUANG</a>
         <hr class="solid">
         
-        <a href="something" class="button1">LOG OUT</a>
+        <input type="submit" class='button1' value="LOG OUT">
 
         
     </div>
