final settings + homefeed done
the sidebar and post structure are in the html.css file - the js file for settings is just a scroll thing

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -156,20 +156,20 @@
 
             <div class='container2'>
                 <div class='form-box3'>
-                    <form>
+                    <form id="message-label">
                         <label for="fname">Name</label>
                     </form>
                     <form>
                         <input type="text" id="fname" name="fname" placeholder="Your full name, nickname, or business name" value="Angela Zhang">
                     </form>
-                    <form>
+                    <form id="message-label">
                         <label for="email">Email</label>
                     </form>
                     <form>
                         <input type="text" id="email" name="email" placeholder="Your berkeley.edu email" value="calpals@berkeley.edu">
                     </form>
                     
-                    <form>
+                    <form id="message-label">
                         <label for="subject">Subject</label>
                     </form>
                     <form>
