--- a/calpals_home/home.html
+++ b/calpals_home/home.html
@@ -25,7 +25,7 @@
 			<label class="label">Password:</label>
 			<input type="password">
 			<button type="button" class="button"> Sign In </button>
-			<a href="replace this">Forgot password?</a>
+ 			<a href = "" class="secondary-button"> Forgot Password? </a>
 			<p id="bolder"> or </p>
 			<button type="button" class="button"> Sign Up </button>
 		</div>
