--- a/calpals_home/home.html
+++ b/calpals_home/home.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title> CalPals </title>
-
-		
 		<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Mukta&family=Patua+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css"href="home.css">
+		<script src="./jquery.js"></script>
+        <script src="./login.js"></script>
 	</head>
 
 	<body>
@@ -18,16 +18,44 @@
 		</div>
 		<img class="small-img" id="stamp-pic" src="stamp-logo.svg">
 		<img class="small-img" id="letter-pic" src="mail-logo.svg">
-		<div class="drop" id="sign-in">
-			<img id="round-bear" src="circle-bear.svg">
-			<label class="label">Email Address:</label>
-			<input type="text">
-			<label class="label">Password:</label>
-			<input type="password">
-			<button type="button" class="button"> Sign In </button>
- 			<a href = "" class="secondary-button"> Forgot Password? </a>
-			<p id="bolder"> or </p>
-			<button type="button" class="button"> Sign Up </button>
+		<div class = 'inactive-box'>
+			<div class = "container">
+				<div class = 'sign-in' id = 'sign-in-inactive'>
+					<img class="round-bear" src="circle-bear.svg">
+					<button type="button" class="button" id ="pre-signin"> Sign In </button>
+				</div>
+			</div>
+			<div class = "container">
+				<div class = 'sign-up' id = 'sign-up-inactive'>
+					<img class="round-bear" src="circle-bear.svg">
+					<button type="button" class="button" id ="pre-signup"> Sign Up </button>
+				</div>
+			</div>
+		</div>
+		<div class = 'active-box'>
+			<div class = "container">
+				<div class = 'sign-in' id = 'sign-in-active'>
+					<img class="round-bear" src="circle-bear.svg">
+					<label class="label">Email Address:</label>
+					<input type="text">
+					<label class="label">Password:</label>
+					<input type="password">
+					<button type="button" class="button" id = "signin"> Sign In </button>
+					<a href = "" class="secondary-button"> Forgot Password? </a>
+				</div>
+			</div>
+			<div class = "container">
+				<div class = 'sign-up' id = 'sign-up-active' style = "display:none">
+					<img class="round-bear" src="circle-bear.svg">
+					<label class="label">Email Address:</label>
+					<input type="text">
+					<label class="label">Password:</label>
+					<input type="password registration">
+					<label class="label">Confirm Password:</label>
+					<input type="confirm password">
+					<button type="button" class="button" id ="signup"> Sign Up </button>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
