fixed header flex
added header to settings and homefeed, also linked pages together to all the files

--- a/calpals_profile/profile.html
+++ b/calpals_profile/profile.html
@@ -12,11 +12,11 @@
 
 	<body>
 		<div id="header">
-			<a href="replace link" ><img id="logo" src="logo.svg"></a>
+			<a href="../homefeed/homefeed.html" ><img id="logo" src="logo.svg"></a>
 			<h1 id ="header-name"> CalPals </h1>
 			<a href="replace this" class="right-shift"> Stamp Store </a>
-			<a href="replace this" class="right-shift"> Profile </a>
-			<a href="replace this" class="right-shift"> Settings </a>
+        	<a href="../calpals_profile/profile.html" class="right-shift"> Profile </a>
+        	<a href="../settings/settings.html" class="right-shift"> Settings </a>
 		</div>
 		<div class="sidebar">
 			<div class="brown-block">
