--- a/homefeed/homefeed.html
+++ b/homefeed/homefeed.html
@@ -15,12 +15,16 @@
   <body>
     <!-- header -->
     <!-- <div class="head-side"> -->
-    <div id="header">
-        <a href="replace link" ><img id="logo" src="logo.svg"></a>
+    <div id="header" style="clear: both;">
+        <div class="right-shift3">
+        <a href="../homefeed/homefeed.html" ><img id="logo" src="logo.svg"></a>
         <h1 id ="header-name"> CalPals </h1>
+        </div>
+        <div class="right-shift2">
         <a href="replace this" class="right-shift"> Stamp Store </a>
-        <a href="replace this" class="right-shift"> Profile </a>
-        <a href="replace this" class="right-shift"> Settings </a>
+        <a href="../calpals_profile/profile.html" class="right-shift"> Profile </a>
+        <a href="../settings/settings.html" class="right-shift"> Settings </a>
+        </div>
     </div>
     <!-- Side navigation -->
     <div class="body2">
