--- a/calpals_profile/profile.html
+++ b/calpals_profile/profile.html
@@ -11,13 +11,17 @@
 	</head>
 
 	<body>
-		<div id="header">
-			<a href="../homefeed/homefeed.html" ><img id="logo" src="logo.svg"></a>
-			<h1 id ="header-name"> CalPals </h1>
-			<a href="replace this" class="right-shift"> Stamp Store </a>
-        	<a href="../calpals_profile/profile.html" class="right-shift"> Profile </a>
-        	<a href="../settings/settings.html" class="right-shift"> Settings </a>
-		</div>
+		<div id="header" style="clear: both;">
+	        <div class="right-shift3">
+	        	<a href="../homefeed/homefeed.html" ><img id="logo" src="logo.svg"></a>
+	        	<h1 id ="header-name"> CalPals </h1>
+	        </div>
+	        <div class="right-shift2">
+	        	<a href="replace this" class="right-shift"> Stamp Store </a>
+	        	<a href="../calpals_profile/profile.html" class="right-shift"> Profile</a>
+	        	<a href="../settings/settings.html" class="right-shift"> Settings </a>
+	        </div>
+    	</div>
 		<div class="sidebar">
 			<div class="brown-block">
 				<h2> your profile </h2>
@@ -40,8 +44,9 @@
 		        <a href="#">RHONA HUANG</a>
 		        <hr class="solid">
 			</div>
+			<input type="submit" class='button1' value="LOG OUT">
 		</div>
-		<div id="page-body">
+		<div class="page-body">
 			<div class="content">
 				<textarea placeholder="Share something about yourself..."></textarea>
 	           	<button id="post-btn"> Post </button>
