added gender + pronouns to settings

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -106,6 +106,28 @@
                     <input type="text" id="fname" name="fname" placeholder="Your full name, nickname, or business name" value="Angela Zhang">
                 </form>
                 <form>
+                    <label for="pronouns">Pronouns</label>
+                </form>
+                <form>
+                    <input type="text" id="fname" name="fname" placeholder="Your preferred pronouns" value="She/Her/Hers">
+                </form>
+                <form>
+                    <label for="gender">Gender</label>
+                </form>
+                <form>
+                    <select id="gender" name="gender">
+                    <option value="female">Female</option>
+                    <option value="male">Male</option>
+                    <option value="non-binary">Non-binary</option>
+                    <option value="transgender-mtf">Transgender (Male-to-Female)</option>
+                    <option value="transgender-ftm">Transgender (Female-to-Male)</option>
+                    <option value="transgender-other">Transgender (Other)</option>
+                    <option value="intersex">Intersex</option>
+                    <option value="other">Other</option>
+                    <option value="no-answer">Prefer not to say</option>
+                    </select>
+                </form>
+                <form>
                     <label for="username">Username</label>
                 </form>
                 <form>
