no more chat/badge links
commented them out

--- a/calpals_profile/profile.html
+++ b/calpals_profile/profile.html
@@ -29,8 +29,8 @@
 			<div class="brown-block" id="pf-pic" >
 			<!-- 	<img id="pf-pic" src="https://lol-stats.net/uploads/yhQoSAZt6KzYB4o9XKSPQskoy7vCD7nJE9PhCrRv.jpeg"> -->
 			</div>
-			<a href="replace this" class="sidebar-link"> Chat </a>
-			<a href="replace this" class="sidebar-link"> Badges </a>
+			<!-- <a href="replace this" class="sidebar-link"> Chat </a>
+			<a href="replace this" class="sidebar-link"> Badges </a> -->
 			<div class="brown-block">
 				<h2> friends </h2>
 			</div>
