--- a/full-app/homefeed/homefeed.html
+++ b/full-app/homefeed/homefeed.html
@@ -21,7 +21,7 @@
         <h1 id ="header-name"> CalPals </h1>
         </div>
         <div class="right-shift2">
-        <a href="replace this" class="right-shift"> Stamp Store </a>
+        <a href="../stamp/stampstore.html" class="right-shift"> Stamp Store </a>
         <a href="../calpals_profile/profile.html" class="right-shift"> Profile </a>
         <a href="../settings/settings.html" class="right-shift"> Settings </a>
         </div>
