--- a/full-app/calpals_home/home.html
+++ b/full-app/calpals_home/home.html
@@ -13,7 +13,6 @@
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebase/8.1.1/firebase-analytics.js"></script>
 <script>
     var firebaseConfig = {
         apiKey: "AIzaSyA0Yl8igRCQQaDVJ8-eVFE614d2fARpewU",
@@ -26,7 +25,7 @@
         measurementId: "G-Q2FFZLHGM2"
     };
     firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
+    const auth = firebase.auth();
 </script>
 <script src="https://www.gstatic.com/firebase/init.js"></script>
 
